tests/reference/asr-character_03-a7476e8.stderr
syntax error: Token 'str' (of type 'identifier') is unexpected here
 --> tests/warnings/character_03.f90:3:21
  |
3 |     character*(2+3) str
  |                     ^^^ 
